--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -1,4 +1,10 @@
 vi:
+  activerecord:
+    attributes:
+      user:
+        name: "Tài khoản"
+        email: "Email"
+        password: "Mật khẩu"
   static_pages:
     home:
       title: "Chào mừng đến với Sample App"
@@ -50,4 +56,15 @@ vi:
   users:
     new:
       label: "Đăng ký"
-      description: <p>Find me in app/views/users/new.html.erb</p>
+      user_name: "Tài khoản"
+      password: "Mật khẩu"
+      password_confirmation: "Nhập lại mật khẩu"
+      submit: "Tạo tài khoản"
+    create:
+      success: "Chào mừng đến với Sample App"
+    show:
+      user_not_found: "Không tìm thấy người dùng"
+  shared:
+    error_messages:
+      contains_error: "Biểu mẫu gồm"
+      error: "Lỗi"
