--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -72,5 +72,6 @@ en:
       password: "Password"
       new_user: "New User?"
       signup: "Sign up now!"
+      remember_me: "Remember me on this computer"
     create:
       invalid: "Invalid email/password combination"
