--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -89,6 +89,7 @@ en:
       new_user: "New User?"
       signup: "Sign up now!"
       remember_me: "Remember me on this computer"
+      forgot_password: "Forgot password?"
     create:
       invalid: "Invalid email/password combination"
       not_activated: "Account not activated. Please check your email to
@@ -101,3 +102,27 @@ en:
       header: "Welcome to the Sample App! Click on the link below to activate
       your account:"
       activate: "Activate"
+    password_reset:
+      subject: "Password Reset"
+      header: "Password Reset"
+      submit: "Reset password"
+      sub_header: "To reset your password click the link below:"
+      expire_time: "This link will expire in two hours."
+      footer: "If you did not request your password to be reset, please ignore
+      this email and your password will stay as it is."
+  password_resets:
+    reset_expire: "Password reset has expired"
+    new:
+      label: "Forgot password"
+      submit: "Submit"
+    create:
+      email_not_found: "Email address not found"
+      send_email: "Email sent with password reset instructions"
+    update:
+      success: "Password has been reset."
+      password_empty: "can't be empty"
+      reset_success: "Password has been reset."
+    edit:
+      label: "Reset password"
+      submit: "Update password"
+      confirmation: "Confirmation"
